# ai-lecture-agent

./: .gitignore  README.md  evaluation_results.json  pyproject.toml  pyrightconfig.json  requirements.txt  validate_lora.py
lecture notes/: flashcards.docx  formula_sheet.docx  summaries.docx
lecture notes/input/: flashcards.docx  formula_sheet.docx  formula_sheet.tex  summaries.docx
lecture notes/train/flashcards/: l10_flashcards.docx  l1_flashcards.docx  l2_flashcards.docx  l3_flashcards.docx  l4_flashcards.docx  l5_flashcards.docx  l6_flashcards.docx  l7_flashcards.docx  l8_flashcards.docx  l9_flashcards.docx
lecture notes/train/summary/: l10_summary.docx  l1_summary.docx  l2_summary.docx  l3_summary.docx  l4_summary.docx  l5_summary.docx  l6_summary.docx  l7_summary.docx  l8_summary.docx  l9_summary.docx
lecture notes/validate/flashcard/: l10_flashcards.docx  l11_flashcards.docx  l1_flashcards.docx  l2_flashcards.docx  l3_flashcards.docx  l4_flashcards.docx  l5_flashcards.docx  l6_flashcards.docx  l7_flashcards.docx  l8_flashcards.docx  l9_flashcards.docx
lecture notes/validate/summary/: l10_summary.docx  l11_summary.docx  l1_summary.docx  l2_summary.docx  l3_summary.docx  l4_summary.docx  l5_summary.docx  l6_summary.docx  l7_summary.docx  l8_summary.docx  l9_summary.docx
models/tinyllama-lora/: adapter_config.json  adapter_model.safetensors
src/agent/: .env  agent.py  cli.py  eval.py  eval_cli.py  evaluation_matrix.py  flashcards.py  formulas.py  loaders.py  nlp.py  output.py  text_utils.py  train_lora.py
(+7 files in other folders)
