[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lecture-agent"
version = "0.1.0"
description = "Open-source agent to summarize lecture notes, create flashcards, and formula sheets."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ai-lecture-agent = "agent.cli:main"

